--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,6 @@ api-version: 1.18
 prefix: hapiba
 authors: [ aand13sc, shmn7iii ]
 description: hapiba system
+commands:
+  hapiba:
+    description: hapiba command
